<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="dialog">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:padding="15dp"
        android:text="@string/dialog_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

    <Spinner
        android:id="@+id/speciesPicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/primaryLightColor"
        android:entries="@array/species"
        android:padding="5dp"
        android:popupBackground="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="@+id/speciesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/speciesLabel"
        app:layout_constraintTop_toTopOf="@+id/speciesLabel" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/dateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateButton"
        app:layout_constraintTop_toTopOf="@+id/dateButton" />

    <TextView
        android:id="@+id/speciesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:padding="5dp"
        android:text="@string/species_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/birthday_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speciesPicker" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancel_button"
        android:textColor="@color/secondaryColor"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <Button
        android:id="@+id/buttonSave"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save_button"
        android:textColor="@color/secondaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel" />
</android.support.constraint.ConstraintLayout>